@@ -89,6 +89,10 @@
     <input id=alert_button type=button onclick="alert('I am an alert')" value=Alert>
     <input id=confirm_button type=button onclick="this.value = confirm('set the value')" value=Confirm>
     <input id=prompt_button type=button onclick='this.value = prompt("enter your name", "John Doe")' value=Prompt>
+    
+    <h3>New Window</h3>
+    <a href="success.html" target="_blank">New Window</a>
+    
   </body>
 </html>
 
