@@ -164,4 +164,6 @@ class Page
   button(:alert_button, :id => 'alert_button')
   button(:confirm_button, :id => 'confirm_button')
   button(:prompt_button, :id => 'prompt_button')
+  
+  link(:open_window, :text => 'New Window')
 end
