@@ -74,6 +74,18 @@ describe PageObject do
         watir_page_object.prompt("blah") do
         end
       end
+      
+      it "should switch to a new window with a given title" do
+        watir_browser.should_receive(:window).with(:title => /My\ Title/).and_return(watir_browser)
+        watir_browser.should_receive(:use)
+        watir_page_object.attach_to_window(:title => "My Title")
+      end
+      
+      it "should switch to a new window with a given url" do
+        watir_browser.should_receive(:window).with(:url => /success\.html/).and_return(watir_browser)
+        watir_browser.should_receive(:use)
+        watir_page_object.attach_to_window(:url => "success.html")
+      end
     end
 
     context "when using SeleniumPageObject" do
@@ -119,6 +131,22 @@ describe PageObject do
         selenium_browser.should_receive(:execute_script).twice
         selenium_page_object.prompt("blah") do
         end
+      end
+      
+      it "should switch to a new window with a given title" do
+        selenium_browser.should_receive(:window_handles).and_return(["win1"])
+        selenium_browser.should_receive(:switch_to).and_return(selenium_browser)
+        selenium_browser.should_receive(:window).with("win1").and_return(selenium_browser)
+        selenium_browser.should_receive(:title).and_return("My Title")
+        selenium_page_object.attach_to_window(:title => "My Title")
+      end
+      
+      it "should switch to a new window with a given url" do
+        selenium_browser.should_receive(:window_handles).and_return(["win1"])
+        selenium_browser.should_receive(:switch_to).and_return(selenium_browser)
+        selenium_browser.should_receive(:window).with("win1").and_return(selenium_browser)
+        selenium_browser.should_receive(:current_url).and_return("page.html")
+        selenium_page_object.attach_to_window(:url => "page.html")
       end
     end
   end
